update query params management
