# realtime-energy-api/controllers/communities.js
@@ -9,7 +9,7 @@ const getCommunities = async (req, res = response) => {
         return res.json({
             ok: true,
             msg: "",
-            data:ROWS
+            data: ROWS
         })
     } catch (error) {
         console.log(error)
@@ -23,11 +23,11 @@ const getCommunities = async (req, res = response) => {
 const getCommunitiesById = async (req, res = response) => {
     try {
         const communityId = req.query.id;
-        const [ROWS] = await dbConnection.execute(`SELECT * FROM communities WHERE id = ?`,[communityId]);
+        const [ROWS] = await dbConnection.execute(`SELECT * FROM communities WHERE id = ?`, [communityId]);
         return res.json({
             ok: true,
             msg: "",
-            data:ROWS
+            data: ROWS
         })
     } catch (error) {
         console.log(error)
@@ -39,30 +39,40 @@ const getCommunitiesById = async (req, res = response) => {
 }
 
 const getCommunitiesEnergyByIdDate = async (req, res = response) => {
-    try {        
+    try {
 
         const communityId = req.query.id;
         const date = req.query.date;
         const dateFormat = req.query.dateFormat; // hourly, daily, weekly, monthly, yearly
 
-        const {startDate, endDate} = getDateLimits(date, dateFormat)
-        totalIn,totalOut;
+        // Verify if the params are existent
+        if (!communityId || !date || !dateFormat) {
+            return res.status(400).json({
+                ok: false,
+                msg: 'Missing required query parameters'
+            });
+        }
+
+        const { startDate, endDate } = getDateLimits(date, dateFormat)
+        totalIn, totalOut;
 
         //TODO: check if energy hourly has community_id
-        const [ROWS] = await dbConnection.execute(`SELECT * FROM energy_hourly WHERE community_id = ? AND datetime BETWEEN ? AND ?`, [communityId,startDate,endDate]); 
+        const [ROWS] = await dbConnection.execute(`SELECT * FROM energy_hourly WHERE community_id = ? AND datetime BETWEEN ? AND ?`, [communityId, startDate, endDate]);
 
-        ROWS.map(energyHour=>{
+        ROWS.forEach(energyHour => {
             //TODO: delete kwh_out of community cups?
-            totalIn+=energyHour.kwh_in;
-            totalOut+=energyHour.kwh_out;
+            totalIn += energyHour.kwh_in;
+            totalOut += energyHour.kwh_out;
         })
 
         return res.json({
             ok: true,
             msg: "",
-            data:ROWS,
-            totalIn,
-            totalOut
+            data: {
+                energyData: ROWS,
+                totalIn,
+                totalOut
+            }
         })
 
     } catch (error) {
